
MPCVideoDec
Eliminated high load on the system with frequent navigation on H.264 and MPEG-2 videos when using the D3D11 decoder.

VideoRenderers
EVR-CP and Sync Renderer no longer require d3dx9_43.dll to render statistics text.

Subtitles
Texture size 2560x1600 changed to 2560x1440.

Youtube
Improved retrieval of video metadata.
Added error output for videos with restrictions.

Player
The history of open files and URLs is now saved in the history.mpc_lst file. Added a window for viewing history.
Bookmarks are now saved in the favorites.mpc_lst file.
Reworked saving of many settings. The values of these settings will not be inherited when upgrading from older versions of the player.
Statistics information is now updated after navigation when playback is paused.
Fixed DVD-Video playback with built-in filters.
Open file/URL dialog now automatically removes enclosing quotes from given paths.
Fixed shift and enlargement of the main window when hovering over the cover of the audio file displayed above the taskbar.
Added the command "Add to playlist from clipboard" (Ctrl+V).

Updated Chinese (Simplified) translation (by wushantao).
Updated German translation (by Klaus1189).
Updated Hungarian translation (by mickey).
Updated Dutch and Chinese (Traditional) translation (by beter).
Updated Turkish translation (by cmhrky).
Updated Portuguese (Brazil) translation (by Siegfried Janke).
Updated Japanese translation.
Updated Ukrainian translation (by arestarh1986).

Updated libraries:
	dav1d git-0.9.1-6-gb342445;
	ffmpeg git-n4.5-dev-1460-gb9176dbfb7;
	Little-CMS git-2.12-30-g076cf32;
	MediaInfo git-v21.03-16-gcc597bf7;


1.5.8
=============================
ShoutcastSource
Added decoding of HTML codes like "&#NNNN;" in the title of the track.

UDPReader
Added decoding of HTML codes like "&#NNNN;" in the title of the track for Shoutcast and Icecast radio.

AudioSplitter
Improved work with DFF, DSF, DTD-HD and WAV.
Fixed opening of some WAV files.

MpcAudioRenderer