@@ -21,9 +21,9 @@ Youtube
 Добавлен вывод ошибки для роликов с ограничениями.
 
 Плеер
+Переделано сохранение многих настроек. Значения этих настроек не будут наследоваться при обновлении со старых версий плеера.
 История открытых файлов и URL теперь сохраняется в файле history.mpc_lst. Добавлено окно для просмотра истории.
 Закладки теперь сохраняются в файле favorites.mpc_lst.
-Переделано сохранение многих настроек. Значения этих настроек не будут наследоваться при обновлении со старых версий плеера.
 Информацию в статистике теперь обновляется после перемотки на паузе.
 Исправлено воспроизведение DVD-Video встроенными фильтрами.
 Диалог открытия файла/URL теперь автоматически удаляет обрамляющие кавычки из прописанных путей.
@@ -44,7 +44,7 @@ Youtube
 	ffmpeg git-n4.5-dev-1460-gb9176dbfb7;
 	Little-CMS git-2.12-30-g076cf32;
 	MediaInfo git-v21.03-16-gcc597bf7;
-
+	nanosvg git-3cdd4a9;
 
 1.5.8
 =============================
